<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button6"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="42dp"
        android:onClick="ikiyeGec"
        android:text="@string/Button6"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:onClick="YeniSayfaAc"
        android:text="EYLÜL"
        app:layout_constraintBottom_toTopOf="@+id/button15"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="31dp"
        android:onClick="YeniSayfaAc"
        android:text="AĞUSTOS"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toStartOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="33dp"
        android:onClick="YeniSayfaAc"
        android:text="TEMMUZ"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:onClick="ikiyeGec"
        android:text="@string/Button"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="40dp"
        android:onClick="ikiyeGec"
        android:text="@string/Button2"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="29dp"
        android:onClick="ikiyeGec"
        android:text="@string/Button3"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="109dp"
        android:layout_height="110dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="27dp"
        android:onClick="ikiyeGec"
        android:text="@string/Button4"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="41dp"
        android:onClick="ikiyeGec"
        android:text="@string/Button5"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="33dp"
        android:onClick="YeniSayfaAc"
        android:text="EKİM"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="35dp"
        android:onClick="YeniSayfaAc"
        android:text="KASIM"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button15" />

    <Button
        android:id="@+id/button15"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="35dp"
        android:onClick="YeniSayfaAc"
        android:text="ARALIK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>